--- a/templates/Graphic1.html
+++ b/templates/Graphic1.html
@@ -45,21 +45,20 @@
     <div class="container">
 
       <div class="logo float-left">
-        <h1 class="text-light"><a href="/"><span>COVID-19 World Vaccination Progress</span></a></h1>
+        <h1 class="text-light"><a href="/"><span>COVID-19 Prediction with Machine Learning</span></a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
 
       <nav class="nav-menu float-right d-none d-lg-block">
         <ul>
-          <li class="active"><a href="/">Home</a></li>
-          <li class="drop-down"><a href="">Graphs</a>
+          <li class="active"><a href="index.html">Home</a></li>
+          <li class="drop-down"><a href="">Menu</a>
             <ul>
-              <li><a href="/Graphic1">Top 15</a></li>
-              <li><a href="/Graphic2">Daily Worldwide</a></li>
-              <li><a href="/Graphic3">Per country</a></li>
-              <li><a href="/Graphic4">Map</a></li>
-          
+              <li><a href="Graphic1.html">ML applied to Covid-19</a></li>
+              <li><a href="Graphic2.html">Vaccines</a></li>
+              <li><a href="Graphic1.html">Top 15</a></li>
+              <li><a href="Readmore.html">Blog</a></li>
             </ul>
           </li>
           
@@ -95,6 +94,32 @@
                       </div>
                     </div>
               </div> 
+
+                 <!-- ======= VIDEO ======= -->
+    <section class="why-us section-bg" data-aos="fade-up" date-aos-delay="200">
+      <div class="container">
+
+        <div class="row">
+          <div class="col-lg-6 video-box">
+            <img src="../static/images/vacuna1.jpg" class="img-fluid" alt="">
+            <a href="https://www.youtube.com/watch?v=uWGTciX795o" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>
+          </div>
+
+          <div class="col-lg-6 d-flex flex-column justify-content-center p-5">
+
+            <div class="icon-box">
+              <div class="icon"><i class="bx bx-fingerprint"></i></div>
+              <h4 class="title"><a href="">How vaccines work against COVID-19: Science, Simplified</a></h4>
+              <p class="description">After we have been exposed to an infection, our immune system remembers the threat, in particular by producing antibodies. These are proteins that circulate in the blood and throughout the body; they quickly recognize and disable the invader upon contact, thereby preventing or minimizing illness.</p>
+            </div>
+
+            
+
+          </div>
+        </div>
+
+      </div>
+    </section><!-- VIDEO -->
 
   <!-- ======= Footer ======= -->
   <footer id="footer" data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-duration="500">
