--- a/templates/Graphic2.html
+++ b/templates/Graphic2.html
@@ -23,7 +23,6 @@
   <link href="../static/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
   <link href="../static/assets/vendor/venobox/venobox.css" rel="stylesheet">
   <link href="../static/assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
-  <link href="../static/assets/vendor/aos/aos.css" rel="stylesheet">
   <script src="https://d3js.org/d3.v6.min.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
@@ -52,13 +51,13 @@
 
       <nav class="nav-menu float-right d-none d-lg-block">
         <ul>
-          <li class="active"><a href="index.html">Home</a></li>
+          <li class="active"><a href="/">Home</a></li>
           <li class="drop-down"><a href="">Menu</a>
             <ul>
-              <li><a href="form.html">ML applied to Covid-19</a></li>
-              <li><a href="Graphic3.html">Vaccines Mexico</a></li>
-              <li><a href="Graphic2.html">Vaccines Worldwide</a></li>
-              <li><a href="Readmore.html">Blog</a></li>
+              <li><a href="/form">ML applied to Covid-19</a></li>
+              <li><a href="/Graphic3">Vaccines Mexico</a></li>
+              <li><a href="/Graphic2">Vaccines Worldwide</a></li>
+              <li><a href="/Readmore">Blog</a></li>
             </ul>
           </li>
           
@@ -107,7 +106,7 @@
     vizElement.parentNode.insertBefore(scriptElement, vizElement);                
     </script>
 
-<section class="why-us section-bg" data-aos="fade-up" date-aos-delay="200">
+<section class="why-us section-bg">
   <div class="container">
 
     <div class="row">
@@ -133,7 +132,7 @@
 </section>
 
   <!-- ======= Footer ======= -->
-  <footer id="footer" data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-duration="500">
+  <footer id="footer">
 
     
   <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
@@ -148,7 +147,7 @@
   <script src="../static/assets/vendor/counterup/counterup.min.js"></script>
   <script src="../static/assets/vendor/owl.carousel/owl.carousel.min.js"></script>
   <script src="../static/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="../static/assets/vendor/aos/aos.js"></script>
+  
 
   <!-- Template Main JS File -->
   <script src="../static/assets/js/main.js"></script>
