--- a/templates/Readmore.html
+++ b/templates/Readmore.html
@@ -10,25 +10,24 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="../static/assets/img/favicon.png" rel="icon">
-  <link href="../static/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="/static/assets/img/favicon.png" rel="icon">
+  <link href="/static/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,700,700i&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="../static/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="../static/assets/vendor/animate.css/animate.min.css" rel="stylesheet">
-  <link href="../static/assets/vendor/icofont/icofont.min.css" rel="stylesheet">
-  <link href="../static/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="../static/assets/vendor/venobox/venobox.css" rel="stylesheet">
-  <link href="../static/assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
-  <link href="../static/assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="/static/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="/static/assets/vendor/animate.css/animate.min.css" rel="stylesheet">
+  <link href="/static/assets/vendor/icofont/icofont.min.css" rel="stylesheet">
+  <link href="/static/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="/static/assets/vendor/venobox/venobox.css" rel="stylesheet">
+  <link href="/static/assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
   <script src="https://d3js.org/d3.v6.min.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
   <!-- Template Main CSS File -->
-  <link href="../static/assets/css/style.css" rel="stylesheet">
+  <link href="/static/assets/css/style.css" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: Moderna - v2.2.1
@@ -45,20 +44,20 @@
     <div class="container">
 
       <div class="logo float-left">
-        <h1 class="text-light"><a href="index.html"><span>COVID-19 BLOG</span></a></h1>
+        <h1 class="text-light"><a href="/"><span>COVID-19 BLOG</span></a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
 
       <nav class="nav-menu float-right d-none d-lg-block">
         <ul>
-          <li class="active"><a href="index.html">Home</a></li>
+          <li class="active"><a href="/">Home</a></li>
           <li class="drop-down"><a href="">Menu</a>
             <ul>
-              <li><a href="form.html">ML applied to Covid-19</a></li>
-              <li><a href="Graphic3.html">Vaccines Mexico</a></li>
-              <li><a href="Graphic2.html">Vaccines Worldwide</a></li>
-              <li><a href="Readmore.html">Blog</a></li>
+              <li><a href="/form">ML applied to Covid-19</a></li>
+              <li><a href="/Graphic3">Vaccines Mexico</a></li>
+              <li><a href="/Graphic2">Vaccines Worldwide</a></li>
+              <li><a href="/Readmore">Blog</a></li>
             <ul>
             
               
@@ -87,7 +86,7 @@
     </section><!-- End Blog Section -->
 
     <!-- ======= Blog Section ======= -->
-    <section class="blog" data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-duration="500">
+    <section class="blog">
       <div class="container">
 
         <div class="row">
@@ -97,7 +96,7 @@
 
             <article class="entry entry-single">
               <div class="entry-img">
-                <img src="../static/images/progress.jpg" alt="" class="img-fluid">
+                <img src="/static/images/progress.jpg" alt="" class="img-fluid">
               </div>
 
               <h2 class="entry-title">
@@ -145,7 +144,7 @@
                         <p>There are more than 50 clinical trials worldwide testing potential vaccines, known as candidates, against COVID-19. So far, three of the vaccine candidates have been approved. How far have researchers got in the development of a vaccine? The majority of vaccine candidates for COVID-19 are still in a preclinical phase. That means the candidate vaccines are being tested in animal experiments, for example, rather than with human patients.</p>
                         
                     <div class="entry-img mt-3">
-                    <img src="../static/images/phases.png" alt="" style="width:100% " height="300">
+                    <img src="/static/images/phases.png" alt="" style="width:100% " height="300">
 
 
                     </div>
@@ -174,8 +173,8 @@
               <h3 class="sidebar-title">News</h3>
               <div class="sidebar-item categories">
                 <ul>
-                  <li><a href="search1.html">Priority groups</a></li>
-                  <li><a href="search2.html">How to Properly Wear a Face Mask</a></li>
+                  <li><a href="/search1">Priority groups</a></li>
+                  <li><a href="/search2">How to Properly Wear a Face Mask</a></li>
                   
                   
                 </ul>
@@ -199,23 +198,23 @@
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
-  <footer id="footer" data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-duration="500">
+  <footer id="footer">
 
    
   <!-- Vendor JS Files -->
-  <script src="../static/assets/vendor/jquery/jquery.min.js"></script>
-  <script src="../static/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="../static/assets/vendor/jquery.easing/jquery.easing.min.js"></script>
-  <script src="../static/assets/vendor/php-email-form/validate.js"></script>
-  <script src="../static/assets/vendor/venobox/venobox.min.js"></script>
-  <script src="../static/assets/vendor/waypoints/jquery.waypoints.min.js"></script>
-  <script src="../static/assets/vendor/counterup/counterup.min.js"></script>
-  <script src="../static/assets/vendor/owl.carousel/owl.carousel.min.js"></script>
-  <script src="../static/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="../static/assets/vendor/aos/aos.js"></script>
+  <script src="/static/assets/vendor/jquery/jquery.min.js"></script>
+  <script src="/static/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="/static/assets/vendor/jquery.easing/jquery.easing.min.js"></script>
+  <script src="/static/assets/vendor/php-email-form/validate.js"></script>
+  <script src="/static/assets/vendor/venobox/venobox.min.js"></script>
+  <script src="/static/assets/vendor/waypoints/jquery.waypoints.min.js"></script>
+  <script src="/static/assets/vendor/counterup/counterup.min.js"></script>
+  <script src="/static/assets/vendor/owl.carousel/owl.carousel.min.js"></script>
+  <script src="/static/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  
 
   <!-- Template Main JS File -->
-  <script src="../static/assets/js/main.js"></script>
+  <script src="/static/assets/js/main.js"></script>
 
 </body>
 
