--- a/templates/search2.html
+++ b/templates/search2.html
@@ -52,13 +52,13 @@
 
       <nav class="nav-menu float-right d-none d-lg-block">
         <ul>
-          <li class="active"><a href="index.html">Home</a></li>
+          <li class="active"><a href="/">Home</a></li>
           <li class="drop-down"><a href="">Menu</a>
             <ul>
-              <li><a href="form.html">ML applied to Covid-19</a></li>
-              <li><a href="Graphic3.html">Vaccines Mexico</a></li>
-              <li><a href="Graphic2.html">Vaccines Worldwide</a></li>
-              <li><a href="Readmore.html">Blog</a></li>
+              <li><a href="/form">ML applied to Covid-19</a></li>
+              <li><a href="/Graphic3">Vaccines Mexico</a></li>
+              <li><a href="/Graphic2">Vaccines Worldwide</a></li>
+              <li><a href="/Readmore">Blog</a></li>
             </ul>
           </li>
           
