--- a/templates/Readmore.html
+++ b/templates/Readmore.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Vaccines</title>
+  <title>Blog Single - Moderna Bootstrap Template</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -45,26 +45,27 @@
     <div class="container">
 
       <div class="logo float-left">
-        <h1 class="text-light"><a href="/"><span>COVID-19 World Vaccination Progress</span></a></h1>
+        <h1 class="text-light"><a href="/"><span>COVID-19 BLOG</span></a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
 
       <nav class="nav-menu float-right d-none d-lg-block">
         <ul>
-            <li class="active"><a href="/">Home</a></li>
-            <li class="drop-down"><a href="">Graphs</a>
-              <ul>
-                <li><a href="/Graphic1">Top 15</a></li>
-                <li><a href="/Graphic2">Daily Worldwide</a></li>
-                <li><a href="/Graphic3">Per country</a></li>
+          <li class="active"><a href="/">Home</a></li>
+          <li class="drop-down"><a href="">Menu</a>
+            <ul>
+              <li><a href="/form">ML applied to Covid-19</a></li>
+              <li><a href="/Graphic3">Vaccines Mexico</a></li>
+              <li><a href="/Graphic2">Vaccines Worldwide</a></li>
+              <li><a href="/Readmore">Blog</a></li>
+            <ul>
             
-              </ul>
-            </li>
-            
-          </ul>
-        </nav><!-- .nav-menu -->
-  
+              
+          </li>
+         
+        </ul>
+      </nav><!-- .nav-menu -->
 
     </div>
   </header><!-- End Header -->
@@ -77,6 +78,9 @@
 
         <div class="d-flex justify-content-between align-items-center">
           <h2>Blog</h2>
+
+          <ol>
+ 
         </div>
 
       </div>
@@ -89,9 +93,9 @@
         <div class="row">
 
           <div class="col-lg-8 entries">
+            <h1>Recent news</h1>
 
-            <article class="entry">
-
+            <article class="entry entry-single">
               <div class="entry-img">
                 <img src="../static/images/progress.jpg" alt="" class="img-fluid">
               </div>
@@ -120,7 +124,7 @@
                     
                     Data sources: at the end of this page you find a detailed list of all our country-specific sources.
                     Open access: as with all of our data, we are making this dataset openly available, so that everyone can check and use the data that we bring together. 
-                    <a href="https://ourworldindata.org/covid-vaccinations#:~:text=The%20Our%20World%20in%20Data,death%20toll%20of%20infectious%20diseases">see more</a>.
+                    <a href="https://ourworldindata.org/covid-vaccinations#:~:text=The%20Our%20World%20in%20Data,death%20toll%20of%20infectious%20diseases" target="_blank">see more</a>.
                 </div>
                
 
@@ -148,15 +152,47 @@
                     </div>
               </div>
 
-            </article><!-- End blog entry -->
+              </article>
 
-            
 
-          
 
-                </div><!-- End .row -->
 
-      </div><!-- End .container -->
+          </div><!-- End blog entries list -->
+
+          <div class="col-lg-4">
+
+            <div class="sidebar">
+
+              <!--<h3 class="sidebar-title">Search</h3>
+              <div class="sidebar-item search-form">
+                <form action="">
+                  <input type="text">
+                  <button type="submit"><i class="icofont-search"></i></button>
+                </form>
+              </div> End sidebar search formn-->
+
+              <h3 class="sidebar-title">News</h3>
+              <div class="sidebar-item categories">
+                <ul>
+                  <li><a href="/search1">Priority groups</a></li>
+                  <li><a href="/search2">How to Properly Wear a Face Mask</a></li>
+                  
+                  
+                </ul>
+
+              </div><!-- End sidebar categories-->
+
+              
+
+              </div><!-- End sidebar tags-->
+
+            </div><!-- End sidebar -->
+
+          </div><!-- End blog sidebar -->
+
+        </div><!-- End row -->
+
+      </div><!-- End container -->
 
     </section><!-- End Blog Section -->
 
@@ -165,8 +201,7 @@
   <!-- ======= Footer ======= -->
   <footer id="footer" data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-duration="500">
 
-    
-
+   
   <!-- Vendor JS Files -->
   <script src="../static/assets/vendor/jquery/jquery.min.js"></script>
   <script src="../static/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
