--- a/templates/Graphic2.html
+++ b/templates/Graphic2.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Vaccines</title>
+  <title>Covid-19</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -53,13 +53,12 @@
       <nav class="nav-menu float-right d-none d-lg-block">
         <ul>
           <li class="active"><a href="/">Home</a></li>
-          <li class="drop-down"><a href="">Graphs</a>
+          <li class="drop-down"><a href="">Menu</a>
             <ul>
-              <li><a href="/Graphic1">Top 15</a></li>
-              <li><a href="/Graphic2">Daily Worldwide</a></li>
-              <li><a href="/Graphic3">Per country</a></li>
-              <li><a href="/Graphic4">Map</a></li>
-          
+              <li><a href="/form">ML applied to Covid-19</a></li>
+              <li><a href="/Graphic3">Vaccines Mexico</a></li>
+              <li><a href="/Graphic2">Vaccines Worldwide</a></li>
+              <li><a href="/Readmore">Blog</a></li>
             </ul>
           </li>
           
@@ -71,30 +70,67 @@
 
   <main id="main">
 
-    <!-- ======= Our Team Section ======= -->
-    <section class="breadcrumbs">
+   
+   
+
+    <!-- ======= TABLEAU Section ======= -->
+    <section class="features">
       <div class="container">
 
-        <div class="d-flex justify-content-between align-items-center">
-          <h2>Daily Worldwide Vaccination</h2>
-        
+
+    <div class='tableauPlaceholder' id='viz1615946497672' 
+    style='position: relative'><noscript><a href='#'>
+    <img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Fi&#47;FinalProjectGraphs_16156581243080&#47;Dashboard1&#47;1_rss.png' 
+    style='border: none' /></a></noscript><object class='tableauViz'  
+    style='display:none;'><param name='host_url' 
+    value='https%3A%2F%2Fpublic.tableau.com%2F' /> 
+    <param name='embed_code_version' value='3' /> 
+    <param name='site_root' value='' /><param name='name' 
+    value='FinalProjectGraphs_16156581243080&#47;Dashboard1' />
+    <param name='tabs' value='no' /><param name='toolbar' 
+    value='yes' /><param name='static_image' 
+    value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Fi&#47;FinalProjectGraphs_16156581243080&#47;Dashboard1&#47;1.png' /> 
+    <param name='animate_transition' value='yes' />
+    <param name='display_static_image' value='yes' />
+    <param name='display_spinner' value='yes' />
+    <param name='display_overlay' value='yes' />
+    <param name='display_count' value='yes' />
+    <param name='language' value='en' /></object></div>                
+    <script type='text/javascript'>                    
+    var divElement = document.getElementById('viz1615946497672');                    
+    var vizElement = divElement.getElementsByTagName('object')[0];                    
+    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='100%';vizElement.style.maxWidth='950px';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';vizElement.style.maxHeight='1087px';} 
+    else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='100%';vizElement.style.maxWidth='950px';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';vizElement.style.maxHeight='1087px';} 
+    else { vizElement.style.width='100%';vizElement.style.height='727px';}                     
+    var scriptElement = document.createElement('script');                    
+    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    
+    vizElement.parentNode.insertBefore(scriptElement, vizElement);                
+    </script>
+
+<section class="why-us section-bg" data-aos="fade-up" date-aos-delay="200">
+  <div class="container">
+
+    <div class="row">
+      <div class="col-lg-6 video-box">
+        <img src="../static/images/vacuna1.jpg" class="img-fluid" alt="">
+        <a href="https://www.youtube.com/watch?v=uWGTciX795o" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>
+      </div>
+
+      <div class="col-lg-6 d-flex flex-column justify-content-center p-5">
+
+        <div class="icon-box">
+          <div class="icon"><i class="bx bx-fingerprint"></i></div>
+          <h4 class="title"><a href="">How vaccines work against COVID-19: Science, Simplified</a></h4>
+          <p class="description">After we have been exposed to an infection, our immune system remembers the threat, in particular by producing antibodies. These are proteins that circulate in the blood and throughout the body; they quickly recognize and disable the invader upon contact, thereby preventing or minimizing illness.</p>
         </div>
 
-      </div>
-    </section>
+        
 
-    <!-- ======= Team Section ======= -->
-    <div class="row" data-aos="fade-up">
-      <div class="col-12 mt-2">
-        <div class="container">
-          <div class="row">
-              <div class="col-12">
-                  <div class="card">
-                      <div class="card-body">
-                        <div id="world"></div>
-                      </div>
-                    </div>
-              </div> 
+      </div>
+    </div>
+
+  </div>
+</section>
 
   <!-- ======= Footer ======= -->
   <footer id="footer" data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-duration="500">
